--- a/trunk/KalypsoModelNA/etc/schema/gml/synthN_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/synthN_de.properties
@@ -2,14 +2,14 @@
 #Wed Aug 19 13:20:50 CEST 2009
 http___www.opengis.net_gml=gml
 http___www.tuhh.de_synthN=syn
-syn_StatNParameter_description=StatNParameter
+syn_StatNParameter_description=Statistischer Niederschlag
 syn_StatNParameter_label=Wiederkehrzeit - ${property\:http\://www.tuhh.de/synthN\#xjah}
-syn_StatNParameter_syn_statNDiag_label=Niederschlagsdiagramm
-syn_StatNParameter_syn_statNDiag_tooltip=Diagramm statistischer Niederschlag
+syn_StatNParameter_syn_statNDiag_label=statistischer Niederschlag
+syn_StatNParameter_syn_statNDiag_tooltip=Definitionstabelle des statistischen Niederschlags
 syn_StatNParameter_syn_xjah_label=Wiederkehrzeit
 syn_StatNParameter_syn_xjah_tooltip=Wiederkehrzeit
-syn_StatN_description=StatN
-syn_StatN_label=Raum - ${property\:http\://www.opengis.net/gml\#name}
+syn_StatN_description=raumbezogene statistische Niederschläge
+syn_StatN_label=Raum - ${listProperty\:http\://www.opengis.net/gml\#name;0}
 syn_StatN_syn_Ort_label=Geometrie
 syn_StatN_syn_Ort_tooltip=Geometrie
 syn_StatN_syn_statNParameterMember_label=mit
