--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -508,6 +508,8 @@ MergeTimeseriesOperation_0=Merging of observations failed.
 MergeTimeseriesOperation_1=Merge Timeseries Operation
 MergeTimeseriesOperation_2=Saving observation failed.
 MergeTimeseriesOperation_3=Merged observations
+MergeTimeseriesOperation.0=The timesteps of the two timeseries do not match: %s - %s
+MergeTimeseriesOperation.1=The gap between the two timeseries must equal one timestep (timestep %s \!= gap %s)...
 MoveTimeSeriesOperation.0=%s\: failed to move timeseries - couldn't create target time series
 MoveTimeSeriesOperation.1=Move timeseries
 MoveTimeSeriesOperation.3='%s'\: already an element of this station
