--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -508,6 +508,8 @@ MergeTimeseriesOperation_0=Zusammenf\u00FChrung der Daten fehlgeschlagen
 MergeTimeseriesOperation_1=Zusammenf\u00FChrung von Zeitreihen
 MergeTimeseriesOperation_2=Speichern der Daten fehlgeschlagen.
 MergeTimeseriesOperation_3=Daten zusammengef\u00FChrt.
+MergeTimeseriesOperation.0=Die Zeitschritte der zwei Zeitreihen stimmen nicht überein: %s - %s
+MergeTimeseriesOperation.1=Die Lücke zwischen den Zeitreihen muss einen Zeitschritt betragen (Zeitschritt %s \!= Lücke %s)...
 MoveTimeSeriesOperation.0=%s\: verschieben fehlgeschlagen, konnte Ziel-Zeitreihe nicht anlegen.
 MoveTimeSeriesOperation.1=Zeitreihe verschieben
 MoveTimeSeriesOperation.3=%s'\: Bereits ein Element dieser Station
