--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -38,7 +38,7 @@ modelConstruction.gft.group.net=Netzverkn\u00FCpfung
 modelConstruction.gft.group.timeseries=Zeitreihenverkn\u00FCpfung
 modelNet.gmt.groundwater=Grundwasser - Vernetzung
 modelNet.gmt.kmStrands=Kalinin-Miljukov Str\u00E4nge - Vernetzung
-modelNet.gmt.map.name=Vernetzung
+modelNet.gmt.map.name=Netzverknüpfung
 modelNet.gmt.nodes=Knoten - Vernetzung
 modelNet.gmt.storageStrands=RHB Str\u00E4nge - Vernetzung
 modelNet.gmt.subCatchments=Teilgebiete - Vernetzung
