--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -339,7 +339,7 @@ GroupUiHandler_1=Group
 HeavyRelationType.2=Please choose which kind of relation should be created\:
 HeavyRelationType.3=Create Relation
 HydrolgyManagementSearchControl_0=Result Type
-HydrologyCalculationCaseGroupUiHandler.0=letzte Rechnung
+HydrologyCalculationCaseGroupUiHandler.0=most recent
 HydrotopesTaskHandler.0=Overlay (DRWBM)
 HydrotopesTaskHandler_0=Sub Catchments
 HydrotopesTaskHandler_1=Landuse
