--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -339,7 +339,7 @@ GroupUiHandler_1=Gruppe
 HeavyRelationType.2=Bitte w\u00E4hlen Sie aus, welche Art von Verbindung hinzugef\u00FCgt werden soll\:
 HeavyRelationType.3=Verbindung erzeugen
 HydrolgyManagementSearchControl_0=Ergebnisart
-HydrologyCalculationCaseGroupUiHandler.0=last calculation
+HydrologyCalculationCaseGroupUiHandler.0=aktuellste Rechnung
 HydrotopesTaskHandler.0=Overlay (DRWBM)
 HydrotopesTaskHandler_0=Teileinzugsgebiete
 HydrotopesTaskHandler_1=Landnutzung
