--- a/trunk/Kalypso1d2dProject/src/org/kalypso/ui/wizards/i18n/messages.properties
+++ b/trunk/Kalypso1d2dProject/src/org/kalypso/ui/wizards/i18n/messages.properties
@@ -210,12 +210,12 @@ org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizard.26=Error durin
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizard.3=Settings for the generation of a longitudinal section in a 2D river reach
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.3=Select the river axis and configure the settings for the generation of the longitudinal section
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.4=River axis
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.5=River axis theme\:
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.6=Parameters
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.7=Data set with river branch ID\:
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.8=river branch ID
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.9=Data set of initial station of line segments\:
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.10=Data set of ending station of line segments\:
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.5=River axis theme
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.6=Parameter
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.7=Property 'Name'
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.8=Water Body
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.9=Property  'Starting Station'
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.10=Property 'Ending Station'
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.11=Stations are specified in km
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.12=Increment of sampling points on axis [m]
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.13=No line theme available in map
