--- a/trunk/Kalypso1d2dProject/src/org/kalypso/ui/wizards/i18n/messages_de.properties
+++ b/trunk/Kalypso1d2dProject/src/org/kalypso/ui/wizards/i18n/messages_de.properties
@@ -204,17 +204,14 @@ org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizard.25=L\u00E4ngss
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizard.26=Fehler bei der L\u00E4ngsschnitterzeugung
 #First page (settings)
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizard.3=Einstellungen zur L\u00E4ngsschnitteserzeugung in einem 2D-Abschnitt 
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.0=NAME
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.1=RIVER_A
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.2=RIVER_B
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.3=W\u00E4hlen Sie eine Gew\u00E4sserachse für den L\u00E4ngsschnitt durch ein 2D-Ergebnis aus 
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.4=Gew\u00E4sserthema
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.5=Gew\u00E4sserthema aus Karte
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.6=Parameter
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.7=Datensatz mit Gew\u00E4sser-ID\:
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.8=Gew\u00E4ssername (ID)
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.9=Datensatz mit Anfangsstationen der Liniensegmente\:
-org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.10=Datensatz mit Endstationen der Liniensegmente\:
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.6=Einstellungen
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.7=Eigenschaft 'Gew\u00E4sser-Name'
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.8=Gew\u00E4sser
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.9=Eigenschaft 'Anfangsstation'
+org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.10=Eigenschaft 'Endstation'
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.11=Stationswerte sind in km angegeben
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.12=St\u00FCtzpunktweite des L\u00E4ngsschnitts [m]
 org.kalypso.ui.wizards.lengthsection.ConfigureLengthSectionWizardPage.13=Kein Linienthema in Karte vorhanden.
