--- a/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages.properties
+++ b/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages.properties
@@ -157,8 +157,21 @@ OracleSettingsControl.0=Password field is empty
 SaveObjectOperation_0=Save object\: %s
 GetCoefficients_0=Loading coefficients from database...
 EventConstants.1=Simulation
+EventConstants.2=1D
+EventConstants.3=2D
 EventConstants.0=Measurement
 ReadGafOperation.0=Error while reading file
 ImportGafData.0=Measurement %s %d
 PdbSettings_1=Unable to access configured configurations
 PdbSettings_0=Missing settings\: '%s'
+CategoryConstants.0=P
+CategoryConstants.1=S
+CategoryConstants.2=W
+CategoryConstants.3=A
+CategoryConstants.4=UK
+CategoryConstants.5=K
+CategoryConstants.6=EI
+CategoryConstants.7=MA
+CategoryConstants.8=AR
+CategoryConstants.9=HA
+CategoryConstants.10=OK
