--- a/trunk/KalypsoModelWspmPdbUI/plugin_de.properties
+++ b/trunk/KalypsoModelWspmPdbUI/plugin_de.properties
@@ -1,2 +1,3 @@
+#Fri Feb 10 14:08:54 CET 2012
 org.kalypso.model.wspm.pdb.ui.internal.gaf.GafExportProfilesWizard.name=Gewässerkundliches Austausch Format (.gaf)
 org.kalypso.model.wspm.pdb.ui.internal.gaf.GafExportProfilesWizard.description=Exportiert die selektierten Profile ins das gewässerkundliche Austausch Format
