--- a/trunk/KalypsoModelWspmPdbUI/OSGI-INF/l10n/bundle.properties
+++ b/trunk/KalypsoModelWspmPdbUI/OSGI-INF/l10n/bundle.properties
@@ -37,3 +37,5 @@ command.description.3=Download the selected items into the local workspace.
 command.name.4=Download
 UpdatePdbCrossSectionsWizard.name=Update cross sections
 UpdatePdbCrossSectionsWizard.description=Updates selected cross sections in database
+org.kalypso.model.wspm.pdb.ui.internal.gaf.GafExportProfilesWizard.name=Hydrological Exchange Format (GAF) (.gaf)
+org.kalypso.model.wspm.pdb.ui.internal.gaf.GafExportProfilesWizard.description=Converts selected profiles into the Hydrological Exchange Format (GAF)
