--- a/trunk/KalypsoModelWspmPdbUI/OSGI-INF/l10n/bundle_de.properties
+++ b/trunk/KalypsoModelWspmPdbUI/OSGI-INF/l10n/bundle_de.properties
@@ -36,3 +36,5 @@ wizard.description.5=Daten aus einer Kalypso Profildatenbank herunterladen
 wizard.description.6=Gewässer aus einer Shapedatei importieren oder aktualisieren
 UpdatePdbCrossSectionsWizard.name=Datenbank aktualisieren
 UpdatePdbCrossSectionsWizard.description=Selektierte Profile in der Datenbank aktualisieren
+org.kalypso.model.wspm.pdb.ui.internal.gaf.GafExportProfilesWizard.name=Gewässerkundliches Austausch Format (.gaf)
+org.kalypso.model.wspm.pdb.ui.internal.gaf.GafExportProfilesWizard.description=Exportiert die selektierten Profile ins das gewässerkundliche Austausch Format
