--- a/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
+++ b/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
@@ -67,11 +67,14 @@ CreateLengthSectionWizard.0=Failed to export length section
 CreateLengthSectionWizard.1=%s - km %.4f - km %.4f
 CreateNewProfileJob.2=New profile
 CreateProfileFromDEMWidget.4=Failed to gather required data.
-CreateProfileFromDEMWidget_0=CLICK-LEFT\: add a new point\r\n
-CreateProfileFromDEMWidget_1=DOUBLE-CLICK\: finish\r\n
-CreateProfileFromDEMWidget_2=BACKSPACE\: remove last point\r\nSPACE\: switch mode\r\nCurrent mode\:
+CreateProfileFromDEMWidget_0=CLICK-LEFT\: add a new point%n
+CreateProfileFromDEMWidget_1=DOUBLE-CLICK\: finish%n
+CreateProfileFromDEMWidget_2=<BACKSPACE>\: remove last point%n
+CreateProfileFromDEMWidget_3=<SPACE>\: switch mode%n
+CreateProfileFromDEMWidget_4=Current mode\: %s
 CreateProfileFromDEMWidget_5=No coverages available. Please add a coverage theme to the map.
 CreateProfileFromDEMWidget_6=Unable to find a theme containing profiles.
+CreateProfileFromDEMWidget_7=<1>\: Digitalize distance (%.2f)%n
 CsvExportColumnsPage_0=Profile Points
 CsvExportColumnsPage_1=Profile Lines
 CsvExportColumnsPage_2=Export Options
