--- a/trunk/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages_de.properties
@@ -7,7 +7,7 @@ PDBRole_0=Administrator
 CheckoutStateWorker.0=Zusta\u00E4nde werden gelesen
 WaterBodyConstants.1=mit Flie\u00DFrichtung
 DeleteObjectOperation_0=L\u00F6sche Objekt\: %s
-WaterBodyConstants.0=gegen Flie\u00DFrrichtung
+WaterBodyConstants.0=gegen Flie\u00DFrichtung
 UpdatePageExtent.10=Feld '%s' darf nicht leer sein.
 GafPart_2=Teilprofil '%s'\: OK
 GafPart_1=Warnungen/Fehler in Teilprofil '%s'
