--- a/KalypsoModelWspmPdbUI/src/org/kalypso/model/wspm/pdb/ui/internal/i18n/messages_de.properties
+++ b/KalypsoModelWspmPdbUI/src/org/kalypso/model/wspm/pdb/ui/internal/i18n/messages_de.properties
@@ -205,8 +205,8 @@ InfoPdbAction.0=Datenbank Info
 InfoPdbAction.1=Zeigt Informationen zur gerade verbundenen Datenbank an
 InitPerspectiveJob.0=Lokaler Arbeitsbereich
 InitPerspectiveJob.1=Initialisiere WSPM Ansichten
-LoadPdbDataOperation.0=Initialisieren WSPM Projektdaten
-LoadPdbDataOperation.1=Initialisieren WSPM Profildatenbankprojekt
+LoadPdbDataOperation.0=WSPM Projektdaten initialisieren
+LoadPdbDataOperation.1=WSPM Profildatenbankprojekt initialisiere
 LoadPdbDataOperation.10=Lade Projektdaten
 LoadPdbDataOperation.2=\u00D6ffne oder erzeuge WSPM Projekt\u2026.
 LoadPdbDataOperation.3=Konnte lokalen Arbeitsbereich nicht initialisieren. Programmabruch.
