--- a/trunk/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages.properties
+++ b/trunk/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages.properties
@@ -1,6 +1,6 @@
 #Fri Feb 10 15:51:15 CET 2012
 TestDocumentBaseAction.1=Opens the base location in a browser
-TestDocumentBaseAction.0=Test
+TestDocumentBaseAction.0=Test address
 PDBRole_3=User
 PDBRole_1=Expert
 PDBRole_0=Super User
