--- a/trunk/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/i18n/messages_de.properties
+++ b/trunk/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/i18n/messages_de.properties
@@ -160,7 +160,7 @@ org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.24=Se
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.28=Anzahl der St\u00FCtzstellen pro Uferlinie (global)\:
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.29=Geben Sie hier die Anzahl der St\u00FCtzstellen je Uferlinie ein. \nDiese Angabe gilt zun\u00E4chst global f\u00FCr alle Segmente. Eine genaue Definition f\u00FCr jedes einzelne Segment kann in der Segmentansicht vorgenommen werden.
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.30=Profile
-org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.31=W\u00E4hlen Sie Ihr Profilthema und ggf. hieraus einzelne Profile
+org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.31=W\u00E4hlen Sie Ihr Profilthema und die zu verwendenden Profile
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.32=<kein Profilthema in Karte vorhanden>
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.33=Profile w\u00E4hlen...
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.36=Anzahl der St\u00FCtzstellen pro Profil (global)\:
