--- a/trunk/KalypsoModelWspmTuhhUI/plugin_de.properties
+++ b/trunk/KalypsoModelWspmTuhhUI/plugin_de.properties
@@ -86,3 +86,5 @@ org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.name = Rauheit
 org.kalypso.model.wspm.tuhh.ui.resolutions.RemovePropertyResolution.name = Komponente entfernen
 org.kalypso.model.wspm.ui.profil.wizard.centerline.DeriveCenterlineWizard.description=Die Gew\u00E4sserachse aus den Tiefpunkten der Profile erzeugen
 org.kalypso.model.wspm.ui.profil.wizard.centerline.DeriveCenterlineWizard.name=Gew\u00E4sserachse ableiten
+org.kalypso.model.wspm.tuhh.ui.imports.ewawi.EwawiImportWizard.name=EWAWI+ Profile
+org.kalypso.model.wspm.tuhh.ui.imports.ewawi.EwawiImportWizard.description=Importiert Profile aus dem EWAWI+ Format.
