--- a/trunk/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/i18n/messages.properties
+++ b/trunk/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/i18n/messages.properties
@@ -140,12 +140,13 @@ org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateChannelData.9=Processing P
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateChannelData.10=Station KM 
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateChannelData.11=River band generator: Wrong segment!
 
-org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.0=Segment View
+org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.0=Edit bank lines
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.1=Select a segment:
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.2=Autom. Zoom
-org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.3=Segment Data
-org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.4=No. of Bank Line Intersections
-org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.5=Select No. of bank line intersections for active segment
+org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.4=No. of Bank Line Intersections (downstreams)
+org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.5=Select number intersections for bank line downstream of active profiel
+org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.6=No. of Bank Line Intersections (upstreams)
+org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.7=Select number intersections for bank line upstream of active profile
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.8=Edit bank line intersections
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.9=Edit intersections of bank line
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.11=Station km %s
@@ -154,9 +155,8 @@ org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.15=Im
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.16=Bank Lines
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.17=Select bank line themes and corresponding single lines
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.18=<no bank line themen available in map>
-org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.19=Select bank line 1 from active theme
+org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.19=Select bank line from active theme
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.23=<no bank line themen available in map>
-org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.24=Select bank line 2 from active theme
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.28=Number of intersections on bank line (global)\:
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.29=Define the number of intersections per bank line. \nThis definition will at first be applied globally for all segments. A more detailled definiton can be made in the segement view.
 org.kalypso.kalypsomodel1d2d.ui.map.channeledit.CreateMainChannelComposite.30=Profiles
