--- a/trunk/KalypsoModel1D2D/plugin_de.properties
+++ b/trunk/KalypsoModel1D2D/plugin_de.properties
@@ -83,4 +83,6 @@ org.kalypso.model1d2d.removeBuildingParameter.description=Stützstellen editieren
 org.kalypso.model1d2d.saveBuildingParameter.name=Änderungen übernehmen
 org.kalypso.model1d2d.saveBuildingParameter.description=Änderungen übernehmen
 
+org.kalypso.model1d2d.exportProfiles.name=Profillinien
+
 org.kalypso.kalypsomodel1d2d.ui.map.function.BorderEdgeFunctionExpression.label=Border-Edges
