--- a/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
+++ b/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
@@ -172,9 +172,9 @@ ProfileFromDEMWizardPage.2=Theme
 ProfileFromDEMWizardPage.3=The new profile will be added to this container.
 ProfileHandlerUtils.0=Export
 ProfileLineDataProvider_3=Station
-ProfileResultExportPage_0=Available Results
-ProfileResultExportPage_1=Please choose the result data that will be joined to the profiles.
-ProfileResultExportPage_2=No results have been selected.
+ProfileResultExportPage_0=Available Water Levels
+ProfileResultExportPage_1=Please choose the water levels that will be joined to the profiles.
+ProfileResultExportPage_2=No water levels have been selected.
 RauheitRule.0=Missing profile point roughness from profile point\: %.2f m
 RauheitenPanel.0=Overwrite all values of the selected channel with the given value.
 RauheitenPanel.1=<Invalid input>
