--- a/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
+++ b/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
@@ -172,9 +172,9 @@ ProfileFromDEMWizardPage.2=Thema
 ProfileFromDEMWizardPage.3=Ein neues Profil wird dem Container hinzugef\u00FCgt.
 ProfileHandlerUtils.0=Export
 ProfileLineDataProvider_3=Station
-ProfileResultExportPage_0=Vorhandene Ergebnisse
-ProfileResultExportPage_1=W\u00E4hlen Sie die Ergebnisdaten aus, die zu den Profilen hinzugef\u00FCgt werden.
-ProfileResultExportPage_2=Es wurden keine Ergebnisse ausgew\u00E4hlt.
+ProfileResultExportPage_0=Vorhandene Wasserspiegellagen
+ProfileResultExportPage_1=W\u00E4hlen Sie die Wasserspiegellagen aus, die zu den Profilen hinzugef\u00FCgt werden.
+ProfileResultExportPage_2=Es wurden keine Wasserspiegellagen ausgew\u00E4hlt.
 RauheitRule.0=Fehlende Profilpunkt-Rauheit ab Profilpunkt\: %.2f m
 RauheitenPanel.0=\u00DCberschreibt alle Werte dieser Flie\u00DFzone mit einem einheitlichen Wert.
 RauheitenPanel.1=<Eingabe nicht m\u00F6glich>
